tests/neg-custom-args/safe-init/alias.scala
object Foo {
  val self = this
  val x = self.n    // error
  val n = 10
}